--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,417 @@
+/* Colors */
+html,
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.modal-wrapper {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  z-index: 1;
 }
+
+.modal-wrapper .backdrop {
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 99;
+}
+
+.modal-wrapper .modal {
+  z-index: 100;
+  width: 500px;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  padding: 3em;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  background: #fff;
+}
+
+.modal-wrapper .modal .row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+}
+
+.modal-wrapper .modal .row.button {
+  background: #ff9900;
+  width: 100%;
+  padding: 0.8em;
+  color: #fff;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font: normal normal normal 16px/20px Poppins;
+  letter-spacing: 0px;
+  cursor: pointer;
+  margin-top: 2em;
+}
+
+.modal-wrapper .modal .row span.error {
+  font: normal normal normal 12px Poppins;
+  color: #ff5500;
+  font-style: italic;
+}
+
+.modal-wrapper .modal .row.input {
+  margin: 0.5em 0;
+}
+
+.modal-wrapper .modal .row.input input,
+.modal-wrapper .modal .row.input select {
+  width: 100%;
+  padding: 1em;
+  border: 1px solid #acacac;
+}
+
+.modal-wrapper .modal .row.input input.error,
+.modal-wrapper .modal .row.input select.error {
+  border: 1px solid #ff5500;
+}
+
+.modal-wrapper .modal .row h1 {
+  text-align: left;
+  font: normal normal 600 22px/33px Poppins;
+  letter-spacing: 0px;
+  color: #000000;
+}
+
+.modal-wrapper .modal .row .half {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  text-align: left;
+  font: normal normal normal 16px/20px Poppins;
+  letter-spacing: 0px;
+}
+
+.modal-wrapper .modal .row .half img {
+  max-width: 100%;
+}
+
+.modal-wrapper .modal .row .half.discount {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #ff9900;
+  font: normal normal bold 14px/20px Poppins;
+  letter-spacing: 0px;
+  position: relative;
+}
+
+.modal-wrapper .modal .row .half.discount::before {
+  position: absolute;
+  content: "";
+  background-image: url("./assets//discount.png");
+  left: -30px;
+  height: 20px;
+  width: 20px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.modal-wrapper .modal .row .half.discount img {
+  max-height: 20px;
+  margin-right: 0.5em;
+}
+
+.modal-wrapper .modal .row .half.button {
+  opacity: 0.2;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  cursor: pointer;
+}
+
+.modal-wrapper .modal .row .half.button img {
+  margin-left: 0.5em;
+  max-height: 16px;
+}
+
+.wrapper {
+  font: Poppins;
+  width: 1588px;
+  min-height: 1200px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 0 1em;
+  margin: auto;
+}
+
+.wrapper .navigation {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.wrapper .navigation .logo svg {
+  max-width: 15em;
+}
+
+.wrapper .navigation .menu {
+  padding: 1.5em 0;
+  margin-top: 2px;
+}
+
+.wrapper .navigation .menu a {
+  padding: 1.5em 0;
+  height: 100%;
+  margin-right: 2em;
+  text-align: left;
+  font: normal normal normal 18px/29px Poppins;
+  letter-spacing: 0px;
+  color: #000000;
+  opacity: 1;
+  text-decoration: unset;
+}
+
+.wrapper .navigation .menu a:last-child {
+  margin-right: 0;
+}
+
+.wrapper .navigation .menu a.active {
+  border-top: 2px solid #0099e5;
+}
+
+.wrapper .navigation .menu a.buy {
+  background: #0099e5;
+  padding: 1em;
+  color: #fff;
+}
+
+.wrapper .navigation .menu a.buy img {
+  margin-right: 0.5em;
+}
+
+.wrapper .navigation .menu a.buy.active {
+  border: unset;
+}
+
+.wrapper .homepage {
+  min-height: 1000px;
+  width: 100%;
+  background-color: #fbfbfb;
+  background-image: url("./assets/background.svg");
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 5em 1em;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.wrapper .homepage .central-box {
+  position: relative;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
+.wrapper .homepage .central-box .content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 2em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.wrapper .homepage .central-box .content h1 {
+  text-align: center;
+  font: normal normal 600 60px/99px Poppins;
+  letter-spacing: 0px;
+  color: #000000;
+  opacity: 1;
+  -webkit-margin-after: 0;
+          margin-block-end: 0;
+}
+
+.wrapper .homepage .central-box .content p {
+  text-align: center;
+  font: normal normal normal 22px/33px Poppins;
+  letter-spacing: 0px;
+  color: #000000;
+  opacity: 1;
+}
+
+.wrapper .homepage .central-box .content span.button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0.5em 1em;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  text-align: left;
+  background: #0099e5;
+  font: normal normal normal 22px/37px Poppins;
+  letter-spacing: 0px;
+  color: #fff;
+  opacity: 1;
+  cursor: pointer;
+}
+
+.wrapper .homepage .central-box .content span.button svg {
+  margin-right: 0.5em;
+}
+
+.wrapper .homepage .central-box .content span.button svg path {
+  fill: #fff;
+}
+
+.wrapper .homepage .central-box .content span.button svg .a {
+  stroke: unset !important;
+}
+
+.wrapper .cookies h1,
+.wrapper .privacy h1 {
+  text-align: left;
+  font: normal normal 22px/33px Poppins;
+  letter-spacing: 0px;
+  color: #000000;
+  font-weight: bold;
+}
+
+.wrapper .cookies p,
+.wrapper .privacy p {
+  text-align: left;
+  font: normal normal normal 16px/20px Poppins;
+  letter-spacing: 0px;
+  color: #000;
+  line-height: 24px;
+}
+
+.wrapper .cookies b,
+.wrapper .privacy b {
+  font-weight: bold;
+}
+
+.wrapper .cookies a,
+.wrapper .privacy a {
+  color: #0099e5;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.wrapper .cookies ul li,
+.wrapper .privacy ul li {
+  text-align: left;
+  font: normal normal normal 16px/20px Poppins;
+  letter-spacing: 0px;
+  color: #000;
+  line-height: 24px;
+}
+
+.wrapper footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 2em 0;
+}
+
+.wrapper footer .side {
+  text-align: left;
+  font: normal normal normal 18px/29px Poppins;
+  letter-spacing: 0px;
+  color: #acacac;
+}
+
+.wrapper footer .side.menu a {
+  color: #acacac;
+  text-decoration: unset;
+  margin-right: 1.5em;
+}
+
+.wrapper footer .side.menu a:last-child {
+  margin-right: 0em;
+}
+
+.wrapper footer .side.menu a.active {
+  color: #0099e5;
+}
+
+/* GLOBAL STYLING */
+.justify-between {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.align-center {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.text-right {
+  text-align: right;
+}
+
+.grey {
+  color: #acacac;
+}
+
+.mt-1 {
+  margin-top: 1em;
+}
+/*# sourceMappingURL=index.css.map */
