--- a/src/index.scss
+++ b/src/index.scss
@@ -82,8 +82,29 @@ body {
 
           &.error {
             border: 1px solid $base-red;
-            }
+          }
         }
+
+        &.paymentlink {
+          display: flex;
+          align-items: center;
+          .address {
+
+          }
+  
+          .copy {
+            padding-top: 8px;
+            svg {
+              width: 30px;
+              height: 30px;
+
+              g path{
+              fill: $base-blue;
+              }
+            }
+          }
+        }
+        
       }
 
       h1 {
@@ -112,7 +133,6 @@ body {
         }
 
         &.discount {
-           
           display: flex;
           align-items: center;
           color: $base-yellow;
@@ -125,15 +145,15 @@ body {
           }
 
           &::before {
-              position: absolute;
-              content: "";
-              background-image: url('./assets//discount.png');
-              left: -30px;
-              height: 20px;
-              width: 20px;
-              background-position: center;
-              background-repeat: no-repeat;
-              background-size: contain;
+            position: absolute;
+            content: "";
+            background-image: url("./assets//discount.png");
+            left: -30px;
+            height: 20px;
+            width: 20px;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: contain;
           }
           img {
             max-height: 20px;
@@ -237,7 +257,6 @@ body {
       width: fit-content;
       height: fit-content;
 
-      
       @include mobile {
         font: normal normal normal 12px Poppins;
         width: 80%;
@@ -340,7 +359,6 @@ body {
       color: #000000;
       font-weight: bold;
 
-
       @include mobile {
         font: normal normal normal 18px Poppins;
       }
@@ -436,4 +454,21 @@ body {
 
 .mt-1 {
   margin-top: 1em;
+}
+
+.blue {
+  color: $base-blue;
+}
+
+.cross {
+  background: linear-gradient(0deg, #ffffff 48%, #aaa 50%, #ffffff 52%);
+}
+
+.bnb {
+  font: normal normal normal 16px/20px Poppins;
+  letter-spacing: 0px;
+
+  &.pl-1 {
+    padding-left: 1em;
+  }
 }
