--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,7 @@ body {
       -ms-flex-align: center;
           align-items: center;
   z-index: 1;
+  overflow: auto;
 }
 
 .modal-wrapper .backdrop {
