--- a/src/index.scss
+++ b/src/index.scss
@@ -23,6 +23,7 @@ body {
   justify-content: center;
   align-items: center;
   z-index: 1;
+  overflow: auto;
 
   .backdrop {
     backdrop-filter: blur(5px);
